# x-followback-cleaner

./: .gitignore  PRIVACY.md  README.md  manifest.json  pyproject.toml
demo-video/: DESIGN.md  README.md  index.html  meta.json  package.json
docs/: stablecoin-donations.md
examples/: allowlist.txt  followers.csv  following.csv
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
extension/lib/: core.js  donate-config.js
extension/tests/: core.test.js
extension/tools/: generate-icons.mjs
src/x_followback_cleaner/: __init__.py  cli.py  compare.py  csvio.py  model.py  reports.py
tests/: test_compare.py  test_csvio.py
